snapshots/syntax/library/functions/interaction/doevents/doevents_basic.snap
---
source: src/syntax/library/functions/interaction/doevents.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: DoEvents
        - kind: Newline
          text: "\n"
